<resources>
    <string name="app_name">통합 병력 지원 시스템</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="id">아이디</string>
    <string name="pw">패스워드</string>
    <string name="pw_re">패스워드(재)</string>
    <string name="get_out">출타 정보</string>
    <string name="my_page">내 정보</string>
    <string name="community">커뮤니티</string>
    <string name="main">메인</string>

    <string name="hint_id">아이디를 입력하세요.</string>
    <string name="hint_pw">비밀번호를 입력하세요.</string>
    <string name="hint_pw_re">비밀번호를 다시 입력하세요.</string>
    <string name="keycode">키코드</string>
    <string name="hint_keycode">발급 받은 키코드를 입력하세요.</string>
    <string name="nickname">닉네임</string>
    <string name="hint_nickname">닉네임을 입력하세요.</string>

    <string name="get_out_period">출타 기간</string>
    <string name="return_time">복귀 예정 시각</string>
    <string name="rtn">복귀</string>
    <string name="home_time">전역 예정일</string>
    <string name="return_state">출타 복귀 현황</string>
    <string name="past_return">기존 출타 정보</string>
    <string name="logout">로그아웃</string>

    <string name="article_read">글읽기</string>
    <string name="article_write">글쓰기</string>

    <string name="total_getout">총 출타 일</string>
    <string name="total_getout_value">36</string>
</resources>
