<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/box1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/line_bottom"

        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/id"
            android:textColor="@color/GreyDark"
            android:textSize="@dimen/FontMediumSmall"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:text="@string/id"
            android:textColor="@color/blueDark"
            android:textSize="@dimen/FontMediumSmall"
            app:layout_constraintStart_toEndOf="@+id/tv_id"
            tools:layout_editor_absoluteY="0dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/box2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/line_bottom"

        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box1"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/nickname"
            android:textColor="@color/GreyDark"
            android:textSize="@dimen/FontMediumSmall"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_nickname_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:text="@string/nickname"
            android:textColor="@color/blueDark"
            android:textSize="@dimen/FontMediumSmall"
            app:layout_constraintStart_toEndOf="@+id/tv_nickname"
            tools:layout_editor_absoluteY="0dp" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/box3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"

        android:background="@drawable/line_bottom"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/box2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">


        <TextView
            android:id="@+id/tv_keycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/keycode"
            android:textColor="@color/GreyDark"
            android:textSize="@dimen/FontMediumSmall"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_keycode_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginStart="68dp"
            android:text="@string/keycode"
            android:textColor="@color/Grey"
            android:textSize="@dimen/FontMediumSmall"
            app:layout_constraintStart_toEndOf="@+id/tv_keycode"
            tools:layout_editor_absoluteY="0dp" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/selector_btn_logout"
        android:text="@string/logout"
        android:textColor="@color/blueDark"
        android:textStyle="bold"

        android:textSize="@dimen/FontMediumSmall"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box3" />

</android.support.constraint.ConstraintLayout>